ling and format fixed
